@@ -39,6 +39,7 @@
 #endif
 
 #include <gmp.h>
+#include <mpfr.h>
 
 CGAL_BEGIN_NAMESPACE
 
@@ -605,26 +606,17 @@ operator>>(std::istream& is, Gmpz &z)
 }
 
 inline
-std::pair<double,double>
+std::pair<double, double>
 to_interval (const Gmpz & z)
 {
-  // GMP returns the closest double (seen in the code).
-  Protect_FPU_rounding<true> P(CGAL_FE_TONEAREST);
-  double app = CGAL::to_double(z);
-  // If it's lower than 2^53, then it's exact.
-  if (CGAL_CLIB_STD::fabs(app) < double(1<<26)*double(1<<27))
-      return to_interval(app);
-  // If the double approximation is infinite, then adding a small +/- epsilon
-  // is not correct enough.
-  if (! CGAL::is_finite(app)) {
-      if (app > 0)
-	  return std::pair<double, double>(CGAL_IA_MAX_DOUBLE,CGALi::infinity);
-      return std::pair<double, double>(-CGALi::infinity, -CGAL_IA_MAX_DOUBLE);
-  }
-  FPU_set_cw(CGAL_FE_UPWARD);
-  Interval_nt<false> approx(app);
-  approx += Interval_nt<false>::smallest();
-  return approx.pair();
+    mpfr_t x;
+    mpfr_init2 (x, 53); /* Assume IEEE-754 */
+    mpfr_set_z (x, z.mpz(), GMP_RNDD);
+    double i = mpfr_get_d (x, GMP_RNDD); /* EXACT but can overflow */
+    mpfr_set_z (x, z.mpz(), GMP_RNDU);
+    double s = mpfr_get_d (x, GMP_RNDU); /* EXACT but can overflow */
+    mpfr_clear (x);
+    return std::pair<double, double>(i, s);
 }
 
 inline
